# llama-infer

./: CMakeLists.txt  README.md
llama-infer/include/base/: allocator.h  base.h  buffer.h  op.h  tensor.h
llama-infer/include/op/: add.h
llama-infer/source/base/: allocator.cpp  buffer.cpp  tensor.cpp
llama-infer/source/op/: add.cpp  layer.cpp  layer.h  rmsnorm_kernel.cpp
llama-infer/source/op/kernel/: add_kernel.cu  add_kernel.h
test/: CMakeLists.txt  test_buffer.cpp  test_op.cpp  test_tensor.cpp
